src/styles/components/_navBarLinks.scss
@use "../abstracts/variables" as *;

.navbar-links-wrapper {
	display: flex;
	align-items: center;
	gap: 1.25rem;

	@media (max-width: 920px) {
		flex-direction: row-reverse;
	}
}

.navbar-links-list,
.navbar-links-hamburger-list {
	display: flex;
	text-transform: capitalize;
}

.navbar-links-list {
	gap: 1.25rem;
	align-items: center;

	.navbar-link-list-item {
		padding: 1.9rem 0.75rem;
		position: relative;
		transition: background-color 0.3s ease-in-out;

		a {
			font-size: 1.125rem;
			transition: color 0.2s ease;
			cursor: pointer;

			&:hover {
				color: #067fd5;
			}
		}

		&.active {
			background-color: #39393a40;

			&::after {
				content: "";
				position: absolute;
				bottom: -2px;
				left: 0;
				width: 0%;
				height: 2px;
				background-color: $maya-blue;
				animation: drawUnderline 0.4s ease forwards;
			}
		}
	}
}

@keyframes drawUnderline {
	from {
		width: 0%;
	}
	to {
		width: 100%;
	}
}

.navbar-links-hamburger-list {
	flex-direction: column;
	gap: 0.5rem;

	.navbar-link-list-item {
		display: flex;
		align-items: center;
		gap: 0.5rem;

		.left-arrow-wrapper {
			display: flex;
			justify-content: center;
			align-items: center;
			width: 2rem;
			height: 100%;
		}

		&.active {
			color: #067fd5;
		}
	}
}

.contact-button {
	position: relative;
	overflow: hidden;
	padding: 1rem 2rem;
	color: $maya-blue;
	border: 2px solid $blue-gray;
	border-radius: 2rem;
	background: rgb(57, 57, 58, 0.6);
	cursor: pointer;
	transition: box-shadow 0.5s ease-in-out;
	font-size: 1.125rem;

	&:hover {
		box-shadow: 0 0 8px 2px #f4f9e920;
	}

	&::before {
		content: "";
		position: absolute;
		top: 0;
		left: -75%;
		height: 100%;
		width: 50%;
		background: linear-gradient(
			120deg,
			rgba(255, 255, 255, 0) 0%,
			rgba(255, 255, 255, 0.6) 50%,
			rgba(255, 255, 255, 0) 100%
		);
		transform: skewX(-25deg);
	}

	&:hover::before {
		animation: shine 0.75s forwards;
	}

	@media (max-width: 920px) {
		padding: 0.75rem 1.5rem;
	}

	@media (max-width: 525px) {
		padding: 0.5rem 1rem;
	}
}

@keyframes shine {
	0% {
		left: -75%;
	}
	100% {
		left: 125%;
	}
}

